--- a/test_cases/gay/report.html
+++ b/test_cases/gay/report.html
@@ -88,6 +88,10 @@
         table img {
             max-width: 50px;
         }
+
+        .compare {
+            max-width: 300px;
+        }
     </style>
 </head>
 <body>
@@ -169,6 +173,12 @@
             </table>
         </div>
     </div>
+
+    <h2>Methodology</h2>
+
+    <p>All country flags are compared to the following reference image:</p>
+
+    <img src="base_flag.png" alt="base image" class="compare">
 
     <h2>Details</h2>
 
