--- a/html_templates/base.html
+++ b/html_templates/base.html
@@ -22,6 +22,7 @@
         img {
             max-width: 100%;
             height: auto;
+            border: 1px solid rgba(0, 0, 0, 0.05);
         }
 
         h1 {
@@ -118,7 +119,7 @@
 
     <p>All country flags are compared to the following reference image:</p>
 
-    <img src="base_flag.png" alt="base image" class="compare">
+    <img src="flagmod.png" alt="base image" class="compare">
 
     <h2>Details</h2>
 
