--- a/html_templates/detail.html
+++ b/html_templates/detail.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
         <th>Score</th>
-        <td>{perc}%</td>
+        <td>{perc}% {attribute}</td>
     </tr>
     <tr>
         <th>Flag</th>
